Fix dark mode issues on Special:Notifications
Bug: T358405

--- a/modules/styles/mw.echo.ui.PageNotificationsOptionWidget.less
+++ b/modules/styles/mw.echo.ui.PageNotificationsOptionWidget.less
@@ -11,7 +11,7 @@
 		transition: background-color 100ms, color 100ms;
 
 		&-highlighted {
-			background-color: #eaecf0;
+			background-color: @background-color-neutral;
 			color: @color-emphasized;
 		}
 
@@ -64,7 +64,7 @@
 	}
 
 	&-label-count {
-		background-color: #eaecf0;
+		background-color: @background-color-neutral;
 		color: @color-subtle;
 		padding: 0.2em 0.5em;
 		margin-left: 0.5em;
